--- a/components/layout.module.css
+++ b/components/layout.module.css
@@ -1,15 +1,38 @@
 .container {
-  max-width: 36rem;
-  padding: 0 1rem;
-  margin: 3rem auto 6rem;
+  max-width: 86rem; 
+  /*padding: 0 1rem;*/
+  /*margin: 3rem auto 6rem;*/
+
+}
+
+.center {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .header {
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding-bottom: 150px;
+  padding-top: 25px;
+  padding-left: 5px;
+  padding-right: 5px;
+  
+}
+
+.Welcome {
+  background-color: lightpink;
+}
+
+.article {
+  padding-left: 25px;
+  padding-right: 5px;
+  
 }
 
 .backToHome {
-  margin: 3rem 0 0;
+  /*margin: 3rem 0 0;*/
+  padding-left: 125px;
 }
