--- a/styles/utils.module.css
+++ b/styles/utils.module.css
@@ -1,3 +1,11 @@
+.heading4XL {
+  font-size: 4.5rem;
+  line-height: 1.2;
+  font-weight: 800;
+  letter-spacing: -0.05rem;
+  margin: 1rem 0;
+}
+
 .heading2Xl {
   font-size: 2.5rem;
   line-height: 1.2;
@@ -49,4 +57,49 @@
 
 .lightText {
   color: #666;
+}
+
+.grid {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  /*max-width: 800px;*/
+}
+
+.card {
+  margin: 1rem;
+  padding: 1.5rem;
+  text-align: left;
+  color: inherit;
+  text-decoration: none;
+  border: 1px solid #eaeaea;
+  background-color: #fff;
+  border-radius: 10px;
+  transition: color 0.15s ease, border-color 0.15s ease;
+  max-width: 300px;
+}
+
+.card:hover,
+.card:focus,
+.card:active {
+  /*color: #0070f3;*/
+  border-color: #1a0e69;
+  background-color:rgb(192, 186, 186);
+}
+
+.card h2 {
+  margin: 0 0 1rem 0;
+  font-size: 1.5rem;
+}
+
+.card p {
+  margin: 0;
+  font-size: 1.25rem;
+  line-height: 1.5;
+}
+
+#firstPhrase {
+  transform: translateX(-50vw);
+  transform: rotate(26deg);
 }
