--- a/styles/global.css
+++ b/styles/global.css
@@ -7,7 +7,7 @@ body {
   line-height: 1.6;
   font-size: 18px;
   /*background: #E4FFB7;*/
-  background: #dcff7d;
+  background: #dfdfdd;
 
 }
 
@@ -62,7 +62,7 @@ body {
 
 .bigName {
   
-  font-size: 200px;
+  font-size: 70px;
 }
 
 .bottomPage {
